# sitk-registration-sys

./: .gitignore  Cargo.toml  README.md  build.rs  interp_test.tif
cpp/: CMakeLists.txt  sitk_adapter.cxx
src/: lib.rs  sys.rs
